# repo2_api_practica2

./: Dockerfile  README.md  pyproject.toml
api/: __init__.py  main.py
artifacts/: feature_schema.json  practica2_model.pkl
examples/: sample_payload.json
src/: __init__.py  practica2_model.py
src/preprocessing/: base_preprocessing.py
