[project]
name = "repo2-api-practica2"
version = "0.1.0"
description = "API local FastAPI para servir el modelo de la Practica 2"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "joblib>=1.4.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=3.0.0,<3.1.0",
    "scikit-learn>=1.8.0,<1.9.0",
    "feature-engine>=1.8.0,<2.0.0",
    "skrub>=0.5.0,<1.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "torch>=2.2.0,<2.3.0",
    "transformers>=4.41.0,<5.0.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "src"]
